# smartphysics

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  conanbuildinfo.cmake  conanfile.txt  conaninfo.txt  install.sh  linearRegression.h  main.cc
include/: naiveBayes.h
src/: CMakeLists.txt  apply.h  basicClasses.h  definitions.h  graph.h  learn.h  linearRegression.cc  logisticsRegression.cc  logisticsRegression.h  main.cc  maker.h  model.h  naiveBayes.cc  registry.h  updater.h  util.h
test/: CMakeLists.txt  testAdvectionUpdater.cc  testNearestNeighbor.cc  testRegistry.cc
